connect to dialogflow done

--- a/app/src/main/res/layout/activity_teacheractivity.xml
+++ b/app/src/main/res/layout/activity_teacheractivity.xml
@@ -10,15 +10,19 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <TextView
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/can_bo"
-            android:textStyle="bold"
-            android:textSize="25sp"
-            android:textColor="@color/black"
-            android:layout_marginStart="@dimen/padding_login"
-            android:layout_marginTop="@dimen/small_login_padding"/>
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/can_bo"
+                android:textStyle="bold"
+                android:textSize="25sp"
+                android:textColor="@color/black"
+                android:layout_marginStart="@dimen/padding_login"
+                android:layout_marginTop="@dimen/small_login_padding"/>
+        </RelativeLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -32,7 +36,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="@string/teacher_lich_ctac"
-                android:paddingBottom="@dimen/padding_login"/>
+                android:paddingBottom="@dimen/padding_login"
+                android:paddingTop="@dimen/padding_login"/>
             <Button
                 android:layout_width="@dimen/function_btn_width"
                 android:layout_height="wrap_content"
@@ -50,6 +55,42 @@
                 />
 
         </LinearLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginEnd="@dimen/padding_login"
+                android:layout_marginBottom="@dimen/padding_login"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/ten_can_bo_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/ten_can_bo"
+                    android:textSize="@dimen/txt_size_lv3"
+                    android:textColor="@color/design_default_color_primary"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/connect_string"
+                    android:textSize="@dimen/txt_size_lv3"
+                    android:textColor="@color/design_default_color_primary"
+                    android:layout_marginStart="@dimen/small_margin"
+                    android:layout_marginEnd="@dimen/small_margin"/>
+                <TextView
+                    android:id="@+id/chuc_vu_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/chuc_vu"
+                    android:textSize="@dimen/txt_size_lv3"
+                    android:textColor="@color/design_default_color_primary"/>
+            </LinearLayout>
+
+        </RelativeLayout>
     </LinearLayout>
 
 </RelativeLayout>
